lessons sort asc done

--- a/index.html
+++ b/index.html
@@ -460,16 +460,76 @@
         sitename: 'The Chill & Skill Academy',
         showLessons: true,
         lessons: [
-          { _id: '1', subject: 'Football', location: 'Hendon', price: 98, space: 5 },
-          { _id: '2', subject: 'Basketball', location: 'Colindale', price: 75, space: 5 },
-          { _id: '3', subject: 'Art', location: 'Brent Cross', price: 120, space: 5 },
-          { _id: '4', subject: 'Coding', location: 'Golders Green', price: 135, space: 5 },
-          { _id: '5', subject: 'Dance', location: 'Hendon', price: 85, space: 5 },
-          { _id: '6', subject: 'Music', location: 'Colindale', price: 110, space: 5 },
-          { _id: '7', subject: 'Chess', location: 'Brent Cross', price: 60, space: 5 },
-          { _id: '8', subject: 'Robotics', location: 'Golders Green', price: 145, space: 5 },
-          { _id: '9', subject: 'Soccer', location: 'Hendon', price: 90, space: 5 },
-          { _id: '10', subject: 'Drawing', location: 'Colindale', price: 115, space: 5 }
+        { 
+    _id: '1',
+    subject: 'Football',
+    location: 'Hendon',
+    price: 98,
+    space: 5,
+},
+{ 
+    _id: '2',
+    subject: 'Basketball',
+    location: 'Colindale',
+    price: 75,
+    space: 5
+},
+{ 
+    _id: '3',
+    subject: 'Art',
+    location: 'Brent Cross',
+    price: 120,
+    space: 5
+},
+{ 
+    _id: '4',
+    subject: 'Coding',
+    location: 'Golders Green',
+    price: 135, 
+    space: 5
+},
+{ 
+    _id: '5',
+    subject: 'Dance',
+    location: 'Hendon',
+    price: 85,
+    space: 5
+},
+{ 
+    _id: '6',
+    subject: 'Music',
+    location: 'Colindale',
+    price: 110,
+    space: 5
+},
+{ 
+    _id: '7',
+    subject: 'Chess',
+    location: 'Brent Cross',
+    price: 60,
+    space: 5
+},
+{ 
+    _id: '8',
+    subject: 'Robotics',
+    location: 'Golders Green',
+    price: 145,
+    space: 5
+},
+{ 
+    _id: '9',
+    subject: 'Soccer',
+    location: 'Hendon',
+    price: 90,
+    space: 5
+},
+{ 
+    _id: '10',
+    subject: 'Drawing',
+    location: 'Colindale',
+    price: 115,
+    space: 5
+}
         ],
         cartItems: [],
         customerName: '',
